--- a/Frontend/base.html
+++ b/Frontend/base.html
@@ -34,88 +34,69 @@
     </div>
   </header>
 
-  <!-- NAVBAR -->
-  <nav class="bg-[#1e293b] shadow-md">
+  <!-- NAVBAR TOP (desktop only) -->
+  <nav class="bg-[#1e293b] shadow-md hidden md:block">
     <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center text-white">
-      <!-- Desktop navbar -->
-      <div class="hidden md:flex w-full justify-between items-center">
-        <a href="{% url 'index' %}" class="text-xl font-semibold text-indigo-300 hover:text-white transition hover:underline">Accueil</a>
-        <a href="{% url 'generate' %}" class="text-xl font-semibold text-indigo-300 hover:text-white transition hover:underline">Générer de la musique</a>
-        <a href="{% url 'help' %}" class="text-xl font-semibold text-indigo-300 hover:text-white transition hover:underline">Nous aider</a>
-        <a href="{% url 'contact' %}" class="text-xl font-semibold text-indigo-300 hover:text-white transition hover:underline">Contact</a>
-        {% if user.is_authenticated %}
-        <a href="{% url 'logout' %}" title="Se déconnecter" class="inline-block text-red-400 hover:text-white hover:underline transition">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                  d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a2 2 0 01-2 2H7a2 2 0 01-2-2V7a2 2 0 012-2h4a2 2 0 012 2v1" />
-          </svg>
-        </a>
-        {% endif %}
-      </div>
-      <!-- Burger pour mobile à gauche -->
-      <div class="md:hidden w-full flex items-center">
-        <button id="menu-toggle" class="text-indigo-300 focus:outline-none">
-          <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                  d="M4 6h16M4 12h16M4 18h16" />
-          </svg>
-        </button>
-      </div>
+      <a href="{% url 'index' %}" class="text-xl font-semibold text-indigo-300 hover:text-white transition hover:underline">Accueil</a>
+      <a href="{% url 'generate' %}" class="text-xl font-semibold text-indigo-300 hover:text-white transition hover:underline">Générer de la musique</a>
+      <a href="{% url 'help' %}" class="text-xl font-semibold text-indigo-300 hover:text-white transition hover:underline">Nous aider</a>
+      <a href="{% url 'contact' %}" class="text-xl font-semibold text-indigo-300 hover:text-white transition hover:underline">Contact</a>
+      {% if user.is_authenticated %}
+      <a href="{% url 'logout' %}" title="Se déconnecter" class="inline-block text-red-400 hover:text-white hover:underline transition">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a2 2 0 01-2 2H7a2 2 0 01-2-2V7a2 2 0 012-2h4a2 2 0 012 2v1" />
+        </svg>
+      </a>
+      {% endif %}
     </div>
-    <!-- Menu mobile horizontal avec icônes -->
-    <div id="mobile-menu"
-         class="md:hidden hidden w-full bg-[#1e293b] py-2 border-t border-slate-700 z-50 animate-fadeIn">
-      <div class="flex justify-around items-end">
-        <a href="{% url 'index' %}" class="flex flex-col items-center text-indigo-300 hover:text-white">
-          <svg class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                  d="M3 12l2-2m0 0l7-7 7 7m-9 13h4" />
-          </svg>
-          <span class="text-xs mt-1">Accueil</span>
-        </a>
-        <a href="{% url 'generate' %}" class="flex flex-col items-center text-indigo-300 hover:text-white">
-          <svg class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                  d="M9 19V6l12-2v13" />
-          </svg>
-          <span class="text-xs mt-1">Générer</span>
-        </a>
-        <a href="{% url 'help' %}" class="flex flex-col items-center text-indigo-300 hover:text-white">
-          <svg class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                  d="M8 10h.01M12 14h.01M16 10h.01M9 16v2a2 2 0 002 2h2a2 2 0 002-2v-2" />
-          </svg>
-          <span class="text-xs mt-1">Aide</span>
-        </a>
-        <a href="{% url 'contact' %}" class="flex flex-col items-center text-indigo-300 hover:text-white">
-          <svg class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                  d="M21 10a9 9 0 11-18 0 9 9 0 0118 0z" />
-          </svg>
-          <span class="text-xs mt-1">Contact</span>
-        </a>
-        {% if user.is_authenticated %}
-        <a href="{% url 'logout' %}" title="Se déconnecter" class="flex flex-col items-center text-red-400 hover:text-white">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                  d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a2 2 0 01-2 2H7a2 2 0 01-2-2V7a2 2 0 012-2h4a2 2 0 012 2v1" />
-          </svg>
-          <span class="text-xs mt-1">Déco</span>
-        </a>
-        {% endif %}
-      </div>
+  </nav>
+
+  <!-- BOTTOM NAVBAR (mobile only) -->
+  <nav class="fixed bottom-0 left-0 right-0 z-50 bg-[#1e293b] border-t border-slate-700 md:hidden">
+    <div class="flex justify-around items-center py-2">
+      <a href="{% url 'index' %}" class="flex flex-col items-center text-indigo-300 hover:text-white">
+        <svg class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M3 12l2-2m0 0l7-7 7 7m-9 13h4" />
+        </svg>
+        <span class="text-xs mt-1">Accueil</span>
+      </a>
+      <a href="{% url 'generate' %}" class="flex flex-col items-center text-indigo-300 hover:text-white">
+        <svg class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M9 19V6l12-2v13" />
+        </svg>
+        <span class="text-xs mt-1">Générer</span>
+      </a>
+      <a href="{% url 'help' %}" class="flex flex-col items-center text-indigo-300 hover:text-white">
+        <svg class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M8 10h.01M12 14h.01M16 10h.01M9 16v2a2 2 0 002 2h2a2 2 0 002-2v-2" />
+        </svg>
+        <span class="text-xs mt-1">Aide</span>
+      </a>
+      <a href="{% url 'contact' %}" class="flex flex-col items-center text-indigo-300 hover:text-white">
+        <svg class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M21 10a9 9 0 11-18 0 9 9 0 0118 0z" />
+        </svg>
+        <span class="text-xs mt-1">Contact</span>
+      </a>
+      {% if user.is_authenticated %}
+      <a href="{% url 'logout' %}" title="Se déconnecter" class="flex flex-col items-center text-red-400 hover:text-white">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a2 2 0 01-2 2H7a2 2 0 01-2-2V7a2 2 0 012-2h4a2 2 0 012 2v1" />
+        </svg>
+        <span class="text-xs mt-1">Déco</span>
+      </a>
+      {% endif %}
     </div>
-    <script>
-      const toggle = document.getElementById('menu-toggle');
-      const menu = document.getElementById('mobile-menu');
-      toggle.addEventListener('click', () => {
-        menu.classList.toggle('hidden');
-      });
-    </script>
   </nav>
 
   <!-- CONTENU SPÉCIFIQUE À CHAQUE PAGE -->
-  <main class="p-6">
+  <main class="p-6 pb-24 md:pb-6">
     {% block content %}
     <!-- contenu de la page -->
     {% endblock %}
@@ -123,3 +104,4 @@
   {% include "footer.html" %}
 </body>
 </html>
+
